[project]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "asyncpg>=0.30.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "fastapi==0.104.1",
    "greenlet>=3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.25.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.12.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "redis==5.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.24.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "python-socketio[asyncio_client]>=5.0.0",
    "geoip2>=4.0.0",
    "aiojobs>=1.0.0",
    "arq>=0.26.3",
]

[tool.ruff]
line-length = 95
target-version = "py311"

exclude = [
    ".venv",
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "tests",
    "dist",
    "docs",
    "scripts",
    "setup_for_postman.py",
    "pytest.ini",
    "pyproject.toml",
    "versions",
    "revisions",
]

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (сортировка импортов)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F401",  # unused import (часто в __init__.py)
    "UP017",
    "UP035",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
lines-after-imports = 2
force-single-line = false
combine-as-imports = true
force-sort-within-sections = true
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
avoid-escape = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.pycodestyle]
max-doc-length = 95

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: slow running tests",
    "performance: performance tests", 
    "security: security tests",
    "load: load tests",
    "integration: integration tests",
]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "-p no:warnings"
]
