[project]
name = "url-shortener"
version = "1.0.0"
description = "Высокопроизводительный асинхронный сервис сокращения URL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "gunicorn>=21.2.0",

    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "asyncpg>=0.30.0",

    # Cache / Queue
    "redis==5.0.1",
    "arq>=0.26.3",

    # Settings
    "pydantic==2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "aiosqlite>=0.21.0",
]

[tool.ruff]
line-length = 95
target-version = "py311"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "B008",  # function calls in argument defaults (FastAPI Depends)
    "UP017", # datetime.UTC (py311 compat)
    "UP035", # deprecated typing imports
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
lines-after-imports = 2
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
avoid-escape = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pycodestyle]
max-doc-length = 95

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: медленные тесты",
    "performance: тесты производительности",
    "security: тесты безопасности",
    "integration: интеграционные тесты",
]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/database/base.py",
    "src/database/engine.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
